@@ -5,28 +5,51 @@ search: 1
 
 # inx_team_contact_form_notification_subject (Filter)
 
-Mit diesem Filter-Hook kann der Betreff der [Kontaktformular-Mails](../komponenten/kontaktformular.html) unmittelbar vor dem Versand modifiziert werden.
+Über diesen Filter-Hook kann der Betreff der [Kontaktformular-Mails](../komponenten/kontaktformular.html) unmittelbar vor dem Versand modifiziert werden. Hierbei können auch [Platzhalter](#Platzhalter-Variablen) verwendet werden (z. B. `{property_title}` oder `{external_id}`).
+
+Anhand des Kontext-Parameters kann unterschieden werden, ob es sich um eine Mail an den Immobilien-Anbieter (im Regelfall der Website-Betreiber bzw. Administrator) oder eine Eingangsbestätigung an den Absender (Interessent/in) handelt.
 
 ## Parameter
 
 | Name (Typ) | Beschreibung |
 | ---------- | ------------ |
-| `$subject` (string) | Inhalt der Mail-Betreffzeile |
+| `$subject` (string) | Inhalt der Mail-Betreffzeile/Platzhalter |
+| `$context` (string) | Kontext/Empfängergruppe (*admin* oder *prospect*) |
+| `$mail_data` (array) | Objekt-/Formulardaten in folgenden Elementen: |
+| | *site_title* (string): Haupt-Titel der Website |
+| | *form_data* (array): übermittelte Formulardaten, jeweils ein Unterarray pro Feld |
+| | *property* (array): Objektdaten inkl. Anbieter-Mailadresse |
+
+## Platzhalter (Variablen)
+
+Die folgenden Platzhalter sind standardmäßig verfügbar. Eine Erweiterung dieser Liste ist mit dem Filter [inx_team_contact_form_notification_subject_variables](filter-inx-team-contact-form-notification-subject-variables.html) möglich.
+
+| Platzhalter        | Beschreibung                                       |
+| ------------------ | -------------------------------------------------- |
+| `{site_title}`     | Haupt-Titel der Website                            |
+| `{post_id}`        | ID des **Immobilien**-Beitrags                     |
+| `{obid}`           | OpenImmo-ID (OBID) der angefragten Immobilie       |
+| `{external_id}`    | vom Anbieter selbst vergebene ID bzw. Objektnummer |
+| `{property_title}` | Bezeichnung der Immobilie                          |
 
 ## Rückgabewert
 
-angepasster Betreff
+angepasster Betreff (optional inkl. Platzhaltern)
 
 ## Rahmenfunktion
 
 Eine Funktion zur Nutzung des Filters wird typischerweise in der folgenden Form in der Datei **functions.php** des **Child-Themes** oder per Code-Snippets-Plugin eingebunden.
 
-```php
-add_filter( 'inx_team_contact_form_notification_subject', 'mysite_modify_contact_form_subject' );
+Siehe auch: [Beispielfunktion zur Erweiterung der Variablen](filter-inx-team-contact-form-notification-subject-variables.html#Rahmenfunktion)
 
-function mysite_modify_contact_form_subject( $subject ) {
-	// Betreff anpassen oder erweitern.
-	// $subject = ...
+```php
+add_filter( 'inx_team_contact_form_notification_subject', 'mysite_modify_contact_form_subject', 10, 3 );
+
+function mysite_modify_contact_form_subject( $subject, $context, $mail_data ) {
+	if ( 'admin' === $context ) {
+		// Betreff von Admin-Benachrichtigungen anpassen.
+		return '{foo} [{site_title}] Anfrage für {property_title} (Objektnr.: {external_id}, OBID: {obid})';
+	}
 
 	return $subject;
 } // mysite_modify_contact_form_subject
