@@ -3,6 +3,7 @@
 = 1.1.0 =
 * Release date: ?
 * OpenImmo-Feedback attachment type selection added.
+* Extended filter hooks for notification subject modifications.
 
 = 1.0.2 =
 * Release date: 2020-09-18
